node/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - port: 6001
      targetPort: 6001
      protocol: TCP
